<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, AndroidGASActivity!</string>
    <string name="app_name">AndroidGAS</string>
    <string name="new_product_name">Nome:</string>
    <string name="new_product_desc">Descrizione:</string>
    <string name="new_product_dim">Dimensione:</string>
    <string name="new_product_measure">Unità di misura:</string>
    <string name="new_product_block_unit">Unità per blocco:</string>
    <string name="new_product_transport_cost">Costo trasporto:</string>
    <string name="new_product_unit_cost">Costo unità:</string>
    <string name="new_product_confirm">Conferma</string>
    <string name="supplier_new_product">Nuovo prodotto</string>
    <string name="supplier_listino">Gestione listino</string>
    <string name="new_product_its_category">Categoria:</string>
    <string name="create_new_prod_cat">Crea nuova categoria</string>
    <string name="new_product_category_descriprion_label">Descrizione categoria:</string>
    <string name="logout">Logout</string>
    <string name="back">Indietro</string>
    <string name="gestione_listino">Gestione Listino</string>
    <string name="purchase_item_availability">"Disponibilità: "</string>
    <string name="new_purchase_title">Creazione nuova scheda</string>
    <string name="available_orders">Ordini disponibili</string>
    <string name="orderSupplier">"Fornitore: "</string>
    <string name="orderResp">"Responsabile: "</string>
    <string name="orderOpenDate">"Apertura: "</string>
    <string name="orderCloseDate">"Chiusura: "</string>
    <string name="order_progress">Completamento quote minime</string>
    <string name="percent_symbol"> %</string>
    <string name="order_purchase_details">Dettagli</string>
    <string name="new_purchase_order_name">"Ordine: "</string>
    <string name="new_purchase_confirm">Conferma</string>
    <string name="product_progress_separator">/</string>
    <string name="new_purchase_desired_amount">"Quantità desiderata: "</string>
    <string name="purchase_item_progress">"Raggiungimento quantità minima: "</string>
    <string name="purchase_item_cost">"Costo parziale: "</string>
    <string name="euro_symbol">" €"</string>
    <string name="new_purchase_tot_cost">"Costo totale: "</string>
    <string name="edit_purchase_title">Modifica scheda</string>
    <string name="create_purchase_main">Ordini disponibili</string>
    <string name="active_purchases_main">Schede attive</string>
    <string name="no_orders">Non ci sono ordini disponibili</string>
    <string name="no_purchases">Non ci sono schede da visualizzare</string>
    <string name="new_product_min_blocks">Minimo blocchi acquistabili:</string>
    <string name="new_product_max_blocks">Massimo blocchi acquistabili:</string>
    <string name="new_order_title">Creazione nuovo ordine</string>
    <string name="new_order_supplier_name">"Fornitore: "</string>
    <string name="no_supplier_products">Il fornitore non ha prodotti disponibili in listino</string>
    <string name="order_name">"Nome ordine: "</string>
    <string name="order_close_date">Data di chiusura: </string>
    <string name="create_new_order">Nuovo ordine</string>
    <string name="new_purchase">Nuova scheda</string>
    <string name="active_orders">Ordini attivi</string>
    <string name="no_active_orders">Non ci sono ordini attivi</string>
    <string name="order_details_title">Dettagli ordine</string>
    <string name="order_history">Storico ordini</string>
    <string name="completed_orders">Ordini completati</string>
    <string name="shipped_orders">Ordini consegnati</string>
    <string name="status">"Stato: "</string>
    <string name="failed">FALLITO</string>
    <string name="ok">OK</string>
    <string name="set_delivery">Impostazione data di consegna</string>
    <string name="completed_order">Ordine completato</string>
    <string name="delivery">"Consegna: "</string>
    <string name="cost">"Costo: "</string>
    <string name="failedF">FALLITA</string>
    <string name="devlier_purchases">Consegna prodotti</string>
    <string name="purchase_delivered">Consegnata</string>
    <string name="delivered">COSEGNATA</string>
    <string name="to_deliver">DA CONSEGNARE</string>
    <string name="competed_purchase_details">Dettagli scheda</string>
    <string name="user">"Utente: "</string>
    <string name="create_order">Crea nuovo ordine</string>
    <string name="new_product_supplier">Fornitore:</string>
    <string name="shipped_purchases_main">Schede in consegna</string>
    <string name="date_not_set">Non impostata</string>
    <string name="delivery_date">"Data di consegna: "</string>
    <string name="product_bought_amount">"Quantità acquistata: "</string>
</resources>
