<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/newProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supplier_new_product" />

    <Button
        android:id="@+id/listinoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supplier_listino" />
    
    <Button
        android:id="@+id/activerOrdersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_orders" />
    
    <Button
        android:id="@+id/completedOrdersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed_orders" />

</LinearLayout>