<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/new_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/create_new_order" />

    <Button
        android:id="@+id/newPurchaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_purchase_main" />



    <Button
        android:id="@+id/activePurchasesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_purchases_main" />

</LinearLayout>