<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:fillViewport="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/newProductImage"
                android:layout_width="118dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/noproduct" />

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" >

                    <ImageButton
                        android:id="@+id/newProductTakePicture"
                        android:layout_width="52dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:src="@android:drawable/ic_menu_camera" />

                    <ImageButton
                        android:id="@+id/newProductChoosePicture"
                        android:layout_width="52dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:src="@android:drawable/ic_menu_gallery" />

                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords" >
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product_desc"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newProductDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords" >
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product_dim"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newProductDim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product_measure"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newProductMeasureUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product_block_unit"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newProductBlockUnits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product_transport_cost"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newProductTransportCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product_unit_cost"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newProductUnitCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product_min_blocks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newProductMinUnits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product_max_blocks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/newProductMaxUnits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product_its_category"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/newProduct_categoriesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/newProductCatDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product_category_descriprion_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <EditText
                android:id="@+id/newProduct_CategoryDesciptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:visibility="gone"
                android:inputType="textCapWords" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/newProductConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_product_confirm" />

</LinearLayout>