<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BBBBBB"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/competed_purchase_details"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/relLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/c4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/c1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_purchase_order_name"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/purchase_order_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
                
                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                
                <TextView
                    android:id="@+id/deliveryLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/orderDeliveryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_not_set"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        </LinearLayout>

                <LinearLayout
                    android:id="@+id/c2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Small Text"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/c5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/c3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" >

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/status_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Small Text"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/purchaseCostLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView1"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right" >

                    <TextView
                        android:id="@+id/purchaseTotCostLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_purchase_tot_cost"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/purchase_tot_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/purchase_euro_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/euro_symbol"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/purchaseProductsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/order_product_static" >
    </ListView>

    <TextView
        android:id="@+id/no_purchase_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_supplier_products"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

</LinearLayout>