<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BBBBBB"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/completed_order"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3dp" >

            <Button
                android:id="@+id/order_confirm"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="false"
                android:layout_centerVertical="true"
                android:text="@string/new_purchase_confirm" />

            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" >

                <TextView
                    android:id="@+id/order_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/new_purchase_order_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/order_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/order_name_label"
                    android:layout_toRightOf="@+id/textView2"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/order_name_label"
                    android:text="@string/new_order_supplier_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/supplier_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/textView2"
                    android:layout_toRightOf="@+id/textView2"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />
                
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/order_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/order_delivery_date"
                android:layout_centerVertical="false"
                android:text="@string/delivery_date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/order_delivery_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_toRightOf="@id/order_date_label"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/orderProductsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/order_product_static" >

    </ListView>




    <TextView
        android:id="@+id/no_supplier_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_supplier_products"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

</LinearLayout>